...
            when (state) {
                GenreUiState.Loading -> {
                    CircularProgressIndicator()
                }

                GenreUiState.Empty -> {
                    Text("Belum ada genre tersedia.")
                }

                is GenreUiState.Error -> {
                    Column(
                        modifier = Modifier.padding(24.dp),
                        horizontalAlignment = Alignment.CenterHorizontally,
...
