...
            when (state) {
                TrailerUiState.Loading -> {
                    CircularProgressIndicator()
                }

                TrailerUiState.Empty -> {
                    Text("Trailer YouTube belum tersedia.")
                }

                is TrailerUiState.Error -> {
                    ErrorMessage(
                        message = state.message,
                        onRetry = onRetry
...
